Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90860

[iOS] The edit menu doesn't hide when typing on the input panel

XMLWordPrintable

    • iOS/tvOS/watchOS
    • b39081230428a9cc08389342c4610d11b2ee210d (qt/qtbase/dev) 3409cda1bccff865598b29001db8598434707816 (qt/qtbase/6.0) 76c76d76ecf588c1e352908fe8537daf5ccded45 (qt/qtbase/6.1) 8e3cbe2e5a468b3bc0cb3f1db7cd0e8c0254e59f (qt/tqtc-qtbase/tqtc/lts-5.15)

      On iOS, if you select some text, the edit menu will show on top of it. And if you tap on the screen (or inside the menu) it will hide. But if you type on input panel, it will stay open. This is wrong.

        For Gerrit Dashboard: QTBUG-90860
        # Subject Branch Project Status CR V

            richard Richard Moe Gustavsen
            richard Richard Moe Gustavsen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes